POFIM-38: Sletter oppsett for periodiserte perioder, innfører enkeltstående første uttaksdag